--- a/assets/form.html
+++ b/assets/form.html
@@ -5,7 +5,7 @@
         <title>Node Express 17.4</title>
     </head>
     <body>
-        <form action="http://localhost:3000/userform" method="GET">
+        <form action="http://localhost:3000/userform/:id" method="GET">
             <p>
                 First Name: <input type="text" name="first_name">
             </p>
